--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
   </div>
   <div class="subscribed-list">
     <h3>SUBSCRIBED</h3>
-    <a href=""><img src="images/a.jpg"><p>krushna</p></a>
-    <a href=""><img src="images/a1.png"><p>vaibhavi</p></a>
-    <a href=""><img src="images/a2.png"><p>fazal</p></a>
-    <a href=""><img src="images/a3.png"><p>shubhangi</p></a>
-    <a href=""><img src="images/a4.png"><p>ravi</p></a>
+    <a href=""><img src="images/a.jpg"><p>user1</p></a>
+    <a href=""><img src="images/a.png"><p>user2</p></a>
+    <a href=""><img src="images/a.png"><p>user3</p></a>
+    <a href=""><img src="images/a.png"><p>user4</p></a>
+    <a href=""><img src="images/a.png"><p>user5</p></a>
   </div>
 
   </div>
