--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
   <div class="subscribed-list">
     <h3>SUBSCRIBED</h3>
     <a href=""><img src="images/a.jpg"><p>user1</p></a>
-    <a href=""><img src="images/a.png"><p>user2</p></a>
-    <a href=""><img src="images/a.png"><p>user3</p></a>
-    <a href=""><img src="images/a.png"><p>user4</p></a>
-    <a href=""><img src="images/a.png"><p>user5</p></a>
+    <a href=""><img src="images/a.jpg"><p>user2</p></a>
+    <a href=""><img src="images/a.jpg"><p>user3</p></a>
+    <a href=""><img src="images/a.jpg"><p>user4</p></a>
+    <a href=""><img src="images/a.jpg"><p>user5</p></a>
   </div>
 
   </div>
